--- a/app/views/snippets/blocks/_others.html.erb
+++ b/app/views/snippets/blocks/_others.html.erb
@@ -15,7 +15,7 @@
                                     class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="others">
-      <% @others.each do |other| %>
+      <% @snippets["Other"].each do |other| %>
         <%= render 'snippets/snippet/other', other: other %>
       <% end %>
     </div>
