--- a/app/views/snippets/blocks/_skills.html.erb
+++ b/app/views/snippets/blocks/_skills.html.erb
@@ -15,7 +15,7 @@
                                     class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="skills">
-      <% @skills.each do |skill| %>
+      <% @snippets["Skill"].each do |skill| %>
         <%= render 'snippets/snippet/skill', skill: skill %>
       <% end %>
     </div>
