--- a/app/views/snippets/blocks/_languages.html.erb
+++ b/app/views/snippets/blocks/_languages.html.erb
@@ -15,7 +15,7 @@
                                       class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="languages">
-      <% @languages.each do |language| %>
+      <% @snippets["Language"].each do |language| %>
         <%= render 'snippets/snippet/language', language: language %>
       <% end %>
     </div>
