--- a/app/views/snippets/lists/_accomplishmentslist.html.erb
+++ b/app/views/snippets/lists/_accomplishmentslist.html.erb
@@ -1,3 +1,3 @@
-<% @accomplishments.each do |accomplishment| %>
+<% @snippets["Accomplishment"].each do |accomplishment| %>
   <%= render 'snippets/snippet/accomplishment', accomplishment: accomplishment %>
 <% end %>
