--- a/app/views/snippets/lists/_detailslist.html.erb
+++ b/app/views/snippets/lists/_detailslist.html.erb
@@ -1,3 +1,3 @@
-<% @details.each do |detail| %>
+<% @snippets["Detail"].each do |detail| %>
   <%= render 'snippets/snippet/detail', detail: detail %>
 <% end %>
