--- a/app/views/snippets/lists/_educationslist.html.erb
+++ b/app/views/snippets/lists/_educationslist.html.erb
@@ -1,3 +1,3 @@
-<% @educations.each do |education| %>
+<% @snippets["Education"].each do |education| %>
   <%= render 'snippets/snippet/education', education: education %>
 <% end %>
