--- a/app/views/snippets/lists/_experienceslist.html.erb
+++ b/app/views/snippets/lists/_experienceslist.html.erb
@@ -1,3 +1,3 @@
-<% @experiences.each do |experience| %>
+<% @snippets["Experience"].each do |experience| %>
   <%= render 'snippets/snippet/experience', experience: experience %>
 <% end %>
