--- a/app/views/snippets/lists/_interestslist.html.erb
+++ b/app/views/snippets/lists/_interestslist.html.erb
@@ -1,3 +1,3 @@
-<% @interests.each do |interest| %>
+<% @snippets["Interest"].each do |interest| %>
   <%= render 'snippets/snippet/interest', interest: interest %>
 <% end %>
