--- a/app/views/snippets/lists/_languageslist.html.erb
+++ b/app/views/snippets/lists/_languageslist.html.erb
@@ -1,3 +1,3 @@
-<% @languages.each do |language| %>
+<% @snippets["Language"].each do |language| %>
   <%= render 'snippets/snippet/language', language: language %>
 <% end %>
