--- a/app/views/snippets/lists/_otherslist.html.erb
+++ b/app/views/snippets/lists/_otherslist.html.erb
@@ -1,3 +1,3 @@
-<% @others.each do |other| %>
+<% @snippets["Other"].each do |other| %>
   <%= render 'snippets/snippet/other', other: other %>
 <% end %>
