--- a/app/views/snippets/lists/_referenceslist.html.erb
+++ b/app/views/snippets/lists/_referenceslist.html.erb
@@ -1,3 +1,3 @@
-<% @endorsements.each do |endorsement| %>
+<% @snippets["Endorsement"].each do |endorsement| %>
   <%= render 'snippets/snippet/reference', endorsement: endorsement %>
 <% end %>
