--- a/app/views/snippets/lists/_skillslist.html.erb
+++ b/app/views/snippets/lists/_skillslist.html.erb
@@ -1,3 +1,3 @@
-<% @skills.each do |skill| %>
+<% @snippets["Skill"].each do |skill| %>
   <%= render 'snippets/snippet/skill', skill: skill %>
 <% end %>
