--- a/app/views/snippets/lists/_summarieslist.html.erb
+++ b/app/views/snippets/lists/_summarieslist.html.erb
@@ -1,3 +1,3 @@
-<% @summaries.each do |summary| %>
+<% @snippets["Summary"].each do |summary| %>
   <%= render 'snippets/snippet/summary', summary: summary %>
 <% end %>
