--- a/app/views/snippets/blocks/_references.html.erb
+++ b/app/views/snippets/blocks/_references.html.erb
@@ -15,8 +15,10 @@
                                         class: "btn btn-block btn-info btn-add-snippet" %>
     </div>
     <div class="panel-body" id="references">
-      <% @snippets["Endorsement"].each do |endorsement| %>
-        <%= render 'snippets/snippet/reference', endorsement: endorsement %>
+      <% if @snippets["Endorsement"] %>
+        <% @snippets["Endorsement"].each do |endorsement| %>
+          <%= render 'snippets/snippet/reference', endorsement: endorsement %>
+        <% end %>
       <% end %>
     </div>
   </div>
