add test account notice on log in and sign up, remove extra space from front page

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,7 +13,7 @@
       <%= f.error_notification %>
 
       <div class="form-inputs">
-        <div class="input-group">       
+        <div class="input-group">
             <span class="input-group-addon">
                 <i class="fa fa-envelope-o fa-15" aria-hidden="true"></i>
             </span>
@@ -40,6 +40,14 @@
       </div>
     <% end %>
     <br>
+    <div class="well well-sm text-center">
+      <h4>Note: Signup system is currently disabled.</h4>
+      <h4>To test the app, you can use the following details:</h4>
+      <br>
+
+      <h5>username: test@example.com</h5>
+      <h5>password: test1234</h5>
+    </div>
     <br>
     <%= render "devise/shared/links" %>
   </div>
