--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -8,5 +8,5 @@
 <div class="front-page-section-two">
 <%= image_tag "fpimage.jpg", class: "img-responsive" %>
 </div>
-<div class="front-page-section-three">
-</div>
+<!-- <div class="front-page-section-three">
+</div> -->
