--- a/app/views/layouts/welcomepage.html.erb
+++ b/app/views/layouts/welcomepage.html.erb
@@ -9,6 +9,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <%= csrf_meta_tags %>
+  <%= render 'layouts/googleanalytics' %>
 </head>
 <body>
   <div id="main-container" class="container-fluid">
