--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <%= csrf_meta_tags %>
-  <%= render 'layouts/googleanalytics' %>
+  <%= analytics_init if GoogleAnalytics.valid_tracker? %>
 </head>
 <body>
   <div id="main-container" class="container-fluid">
