--- a/app/views/layouts/template2.html.erb
+++ b/app/views/layouts/template2.html.erb
@@ -10,6 +10,7 @@
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
   <%= csrf_meta_tags %>
+  <%= analytics_init if GoogleAnalytics.valid_tracker? %>
 </head>
 <body>
   <div id="main-container" class="container-fluid">
